# HiRISE

./: .gitattributes  .gitignore  README.md
Code/: CMakeLists.txt  config.hpp.in  ffmpeg.sh  Übung.tex
Code/data/: camPos  url
Code/include/: animation.hpp  armature.h  boneObject.hpp  bones.hpp  buffer.hpp  camera.hpp  common.hpp  config.hpp  imgui.hpp  mesh.hpp  pbrMultiObject.hpp  pbrObject.hpp  pbrTex.hpp  pngImg.hpp  raytracer.hpp  shader.hpp  shaderObject.hpp  spline.hpp
Code/models/: Lowpolymesh_Eliber.dae  Lowpolymesh_Eliber_full.dae  cube.blend  cube.dae  plane.dae  shard.blend  shard.blend1  shard.dae  shards.dae  sphere.dae  suzanne.blend  suzanne.dae  tableChairMonitor.dae
Code/models/HiRISE_new/: HiRISE.dae  USB.dae  glass.dae  human.dae  human_smooth.dae  monitors.dae  shards.dae  singleGlass.dae  text.dae
Code/shaders/: aufgabe_6.tess  aufgabe_6.tesse  aufgabe_6.vert  main.frag  main.tess  main.tesse  main.vert  mainSimple.frag  mainSimpleNoise.frag
Code/shaders/brdf/: brdf.fs
Code/shaders/compute/: compute.cs  computeMars.cs  main.frag  main.vert
Code/shaders/cubeMap/: conv.frag  hdr.frag  hdr.vert  rough.frag  vert.vert
Code/shaders/deferred/: deferred_compose.frag  deferred_compose.vert  deferred_compose_AA.frag  deferred_compose_AA.vert  fractalFun.frag
Code/shaders/equirectangular/: main.frag  main.vert
Code/shaders/glass/: glass.frag  glass.vert
Code/shaders/pbr/: learn.vert  learnSpec.frag  pbr.frag  pbr.vert  pbrS.vert  pbrS2.vert  pbrST.tess  pbrST.vert  pbrT.frag  pbrT.fs  pbrT.tess  pbrT.tesse  pbrT.vert
Code/shaders/shadowMap/: pbrS.vs  point_shadows.fs  point_shadows.vs  point_shadows_depth.vs
Code/shaders/simple/: USB.frag  simple.frag  simple.vert
Code/shaders/text/: text.frag
Code/src/: computeShaderTest.cpp  main.cpp  pbrTest.cpp  point_shadows_soft.cpp
Doku/: First Draft.html  First Draft.md  arbeitsSchritte.html  arbeitsSchritte.md  blenderExport.html  blenderExport.md  index.html  index.md  install.html  install.md  installation.html  installation.md  storyBoard1.kra  todo.html  todo.md
Doku/glsl_glm/: README.md
